<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/signUp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/signUp_email_field"
        android:layout_width="378dp"
        android:layout_height="49dp"
        android:layout_marginBottom="256dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/email_hint_text"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/signUp_password_field"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/enter_password_text"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_email_field"
        app:layout_constraintVertical_bias="0.067" />

    <EditText
        android:id="@+id/signUp_confirm_password_field"
        android:layout_width="379dp"
        android:layout_height="52dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/confirm_password_text"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_email_field"
        app:layout_constraintVertical_bias="0.382" />

    <Button
        android:id="@+id/signUp_button_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp_text"
        android:textAllCaps="false"
        android:backgroundTint="@color/skyBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_password_field"
        app:layout_constraintVertical_bias="0.71" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="153dp"
        android:layout_height="124dp"
        app:layout_constraintBottom_toTopOf="@+id/signUp_email_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_text"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <Button
        android:id="@+id/get_signIn_button"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/gold"
        android:text="@string/signIn_text"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toEndOf="@+id/signUp_button_field"
        app:layout_constraintTop_toBottomOf="@+id/signUp_confirm_password_field"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="375dp"
        android:layout_height="52dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="Enter your full name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signUp_email_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.878" />


</androidx.constraintlayout.widget.ConstraintLayout>